--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,494 @@
-@import "content.scss";
+// @import "content.scss";
+// @import "footer.scss";
+// @import "template";
+
+.page__body {
+	background: rgb(214, 236, 208);
+
+	font-family: PT Sans, Arial, sans-serif;
+	// margin: 0 auto;
+	// max-width: 100%;
+	// height: auto;
+	
+	// display: flex;
+	// flex-wrap: wrap;
+	// justify-content: center;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+*, ::after, ::before {
+	box-sizing: inherit;
+}
+
+.wrapper {
+	max-width: 1200px;
+	margin: 0 auto;
+}
+
+.wrapper-full{
+	max-width: 1280px;
+	margin: 0 auto;
+}
+
+.page-header {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	transition: 0.2s linear;
+	z-index: 999;
+	// padding-bottom: 20px;
+	&__wrapper {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: flex-end;
+		justify-content: space-between;
+	}
+// 	&__logo {
+// 		display: flex;
+// 		justify-content: center;
+// 		height: 84px;
+// 		width: 100%;
+// 		position: absolute;
+// 	}
+}
+.header_active {
+	background: #81B3D2;
+	height: 96px;
+}
+
+
+a {
+	text-decoration: none;
+	color: #000000;
+}
+
+.site-list__item {	
+	list-style: none;
+	width: 239px;
+	// height: 56px;
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 26px;
+	text-transform: uppercase;
+	color: #000000;
+
+	display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.main-nav {
+	width: 100%;
+}
+.main-nav__list {
+	display: flex;
+	margin: 0;
+	padding: 0;
+	// flex-wrap: wrap;
+}
+
+// .main-nav {
+// 	font-weight: 700;
+// 	font-size: 14px;
+// 	line-height: 26px;
+// 	display: flex;
+// 	align-items: center;
+// 	text-align: center;
+// 	text-transform: uppercase;
+// 	color: #000000;
+// 	&__list {		
+// 		display: flex;
+// 		margin: 0;
+// 		padding: 0;
+// 		align-content: center;
+// 		justify-content: space-around;
+// 	}
+// 	&_burger {
+// 	display: none;
+// 	width: 40px;
+// 	height: 28px;
+// 	position: relative;
+// 	}
+// }
+// .burger_line {
+// 	display: block;
+// 	width: 100%;
+// 	height: 2px;
+// 	background: #81B3D2;
+// 	position: absolute;
+// 	left: 0;
+// 	&_first {
+// 		top: 0;
+// 	}
+// 	&_second {
+// 		top: 50%;
+// 		transform: translateY(-50%);
+// 	}
+// 	&_third {
+// 		bottom: 0;
+// 	}
+// }
+
+// .intro {
+// 	display: flex;
+// 	flex-wrap: wrap;
+// 	background: url(../img/bg-back-desktop@2x.jpg);
+// 	background-position: top center;
+// 	background-repeat: no-repeat;
+// 	justify-content: center;
+// 	// margin-top: 65px;
+// 	&-title {
+// 		margin: 0 auto;
+// 		width: 285px;
+// 		font-weight: 700;
+// 		font-size: 18px;
+// 		line-height: 26px;
+// 		font-style: normal;
+// 		align-items: center;
+// 		text-align: center;
+// 		text-transform: uppercase;
+// 	}
+// 	&-subtitle {
+// 		margin: 0 auto;
+// 		padding: 18px;
+// 		width: 285px;
+// 		font-weight: 400;
+// 		font-size: 14px;
+// 		line-height: 26px;
+// 		align-items: center;
+// 		text-align: center;
+// 		text-transform: uppercase;
+// 	}
+// }
+// .page-main__intro-advantages {
+// 	width: 282px;
+// 	height: 214px;
+// 	justify-content: center;
+// 	padding: 90px 18px 55px 18px;
+// }
+// .compare_cards {
+// 	margin: 0 auto;
+// 	display: flex;
+// 	flex-wrap: wrap;
+// 	justify-content: center;
+// 	text-align: center;
+// 	&-city {
+// 		height: 211px;
+// 		text-align: center;
+// 		padding: 0px 12px 40px 12px;
+// 		background: #81B3D2;
+// 		color: #ffffff;
+// 	}
+// 	&-bridge {
+// 		height: 191px;
+// 		text-align: center;
+// 		padding: 0px 12px 40px 12px;
+// 		background: #81B3D2;
+// 		color: #ffffff;
+// 	}
+// 	&-square {
+// 		text-align: center;
+// 		padding: 0px 12px 40px 12px;
+// 		height: 200px;
+// 		background: #EEEEEE;
+// 	}
+// 	&-road {
+// 		text-align: center;
+// 		padding: 0px 12px 40px 12px;
+// 		height: 200px;
+// 		background: #EEEEEE;
+// 	}
+// 	&-turists {
+// 		text-align: center;
+// 		padding: 0px 12px 40px 12px;
+// 		height: 200px;
+// 		background: #EEEEEE;
+// 	}
+// 	&-item {
+// 		padding-top: 30px;
+// 		font-weight: 700;
+// 		font-size: 18px;
+// 		line-height: 26px;
+// 		align-items: center;
+// 		text-align: center;
+// 		text-transform: uppercase;
+// 	}
+// 	&-number {
+// 		font-weight: 400;
+// 		font-size: 14px;
+// 		line-height: 21px;
+// 		align-items: center;
+// 		text-align: center;
+// 		text-transform: uppercase;
+// 	}
+// 	&-causes {
+// 		font-weight: 400;
+// 		font-size: 14px;
+// 		line-height: 21px;
+// 		align-items: center;
+// 		text-align: center;
+// 		text-transform: uppercase;
+// 	}
+// }
+// .layer {
+// 	position: absolute;
+// 	width: 280px;
+// 	height: 1px;
+// 	left: 20px;
+// 	background: #D6D6D6;
+// }
+// .image-city {
+// 	display: flex;
+// 	flex-wrap: wrap;
+// }
+// .info_cards {
+// 	display: flex;
+// 	flex-wrap: wrap;
+// 	padding: 0 20px;
+// 	&-icon {
+// 		padding: 15px;
+// 	}
+// 	&-subtitle {
+// 		font-weight: 400;
+// 		font-size: 14px;
+// 		line-height: 21px;
+// 		align-items: center;
+// 		text-transform: uppercase;
+// 		padding-left: 70px;
+// 		padding-right: 20px;
+// 	}
+// }
+// .search {
+// 	height: 287px;
+// 	margin: 0 auto;
+// 	display: flex;
+// 	flex-wrap: wrap;
+// 	justify-content: center;
+// 	text-align: center;
+// 	&_cards-item {
+// 		margin: 0 auto;
+// 		padding-top: 33px;
+// 		font-weight: 700;
+// 		font-size: 18px;
+// 		line-height: 26px;
+// 		align-items: center;
+// 		text-align: center;
+// 		text-transform: uppercase;
+// 	}
+// 	&_cards-choice {
+// 		display: flex;
+// 		margin: 0;
+// 		width: 261px;
+// 		height: 120px;
+// 		font-weight: 400;
+// 		font-size: 14px;
+// 		line-height: 21px;
+// 		align-items: center;
+// 		text-align: center;
+// 		text-transform: uppercase;
+// 		margin-bottom: 27px;
+// 	}
+// 	&_button {
+// 		position: absolute;
+// 		width: 280px;
+// 		height: 58px;
+// 		left: 20px;
+// 		font-weight: 700;
+// 		font-size: 21px;
+// 		line-height: 26px;
+// 		text-align: center;
+// 		text-transform: uppercase;
+// 		color: #ffffff;
+// 		background: #81B3D2;
+// 		border: 0;
+// 		margin-bottom: 49px;
+// 	}
+// }
+// .map_mobile {
+// 	display: flex;
+// 	justify-content: center;
+// 	&-marker {
+// 		position: absolute;
+// 		padding-top: 175px;
+// 	}
+// }
+// .footer {
+// 	height: 243px;
+// 	&_visit-title {
+// 		display: flex;
+// 		font-weight: 700;
+// 		font-size: 21px;
+// 		line-height: 26px;
+// 		align-items: center;
+// 		text-align: center;
+// 		text-transform: uppercase;
+// 		justify-content: center;
+// 		margin-top: 38px;
+// 		margin-bottom: 30px;
+// 	}
+// 	&_social {
+// 		display: flex;
+// 		list-style: none;
+// 		margin: 0;
+// 		margin-bottom: 30px;
+// 	}
+// 	&_copyright {
+// 		display: flex;
+// 		font-weight: 400;
+// 		font-size: 14px;
+// 		line-height: 26px;
+// 		justify-content: center;
+// 		align-items: center;
+// 		text-transform: uppercase;
+// 		text-align: center;
+// 	}
+// }
+// ul {
+// 	padding-inline-start: 0px;
+// }
+// .social-button {
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
+// 	width: 46px;
+// 	height: 48px;
+// 	color: #ffffff;
+// 	background-color: #81B3D2;
+// 	padding: 10px;
+// 	margin: 3px;
+// }
+
+// @media screen and (max-width: 769px) {
+	
+// .main-nav {
+// 	display: flex;
+// 	width: 100%;
+// 	height: 100%;	
+// 	top: 0;
+// 	left: 0;
+// 	z-index: 10;
+// 	font-weight: 700;
+// 	font-size: 14px;
+// 	line-height: 26px;
+// 	text-align: center;
+// 	text-transform: uppercase;
+// 	&_close {
+// 		display: none;
+// 	}
+// 	&_burger {
+// 		display: none;
+// 	}
+// }
+// .page-header__logo {
+// 	width: 100%;
+// 	position: absolute;
+// }
+// }
+
+// @media screen and (max-width: 321px) {
+	
+// .page-header__wrapper {  
+//     display: flex;
+// 	align-items: flex-start;
+// 	flex-direction: row;
+// 	justify-content: space-between;
+// }
+// .main-nav {
+// 	width: 100%;
+// 	height: 223px;
+// 	position: fixed;
+// 	top: 0;
+// 	left: 0;
+// 	background: #81B3D2;
+// 	z-index: 10;
+// 	transform: translateX(100%);
+// 	transition: all 0.2s ease-out;
+// 	font-weight: 700;
+// 	font-size: 18px;
+// 	line-height: 40px;
+// 	display: flex;
+// 	align-items: center;
+// 	text-align: center;
+// 	text-transform: uppercase;
+// 	justify-content: center;
+//     &_active {
+// 		transform: translateX(0);		
+// 	}
+//     &_burger {
+// 		display: block;
+// 		margin-top: 20px;
+// 		margin-left: auto;
+// 		margin-right: 20px;
+// 	}
+// 	&__list {
+// 		flex-direction: column;
+// 	}
+// 	&_close {
+// 		display: block;
+// 		width: 40px;
+// 		height: 40px;
+// 		position: absolute;
+// 		top: 20px;
+// 		right: 20px;
+// 		z-index: 11;
+// 	}
+// }
+// a {
+// 	font-weight: 700;
+// 	font-size: 18px;
+// 	line-height: 40px;
+// 	color: #ffffff;
+// }	
+// .header_active {
+// 	position: fixed;
+// 	padding-top: 50px;
+// 	background: #81B3D2;
+// 	// width: 100%;
+	
+// 	.burger_line {
+// 		background: #ffffff;
+// 	}
+// 	.main-nav__list {
+// 		justify-content: space-between;
+// 	}
+// .main-nav_close-line {
+// 	display: block;
+//     width: 100%;
+//     height: 2px;
+//     background-color: #ffffff;
+//     position: absolute;
+//     top: 50%;
+// }
+// .main-nav_close-line:first-child {
+//     transform: translateY(-50%) rotate(45deg);
+// }
+
+// .main-nav_close-line:last-child {
+//     transform: translateY(-50%) rotate(-45deg);
+// }	
+// }
+// .main-nav_close-line {
+// 	display: block;
+//     width: 100%;
+//     height: 2px;
+//     background-color: #ffffff;
+//     position: absolute;
+//     top: 50%;
+// }
+// .main-nav_close-line:first-child {
+//     transform: translateY(-50%) rotate(45deg);
+// }
+// .main-nav_close-line:last-child {
+//     transform: translateY(-50%) rotate(-45deg);
+// }
+// .intro {
+// 	display: flex;
+// 	flex-wrap: wrap;
+// 	background: url(../img/bg-back-mobile@1x.jpg);
+// 	justify-content: center;
+// 	background-repeat: no-repeat;
+// }
+// }
