--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -40,7 +40,6 @@ img {
 	width: 100%;
 	transition: 0.2s linear;
 	z-index: 999;
-	// padding-bottom: 20px;
 	&__wrapper {
 		display: flex;
 		flex-wrap: wrap;
@@ -60,7 +59,6 @@ img {
 	height: 96px;
 }
 
-
 a {
 	text-decoration: none;
 	color: #000000;
@@ -69,7 +67,6 @@ a {
 .site-list__item {	
 	list-style: none;
 	width: 239px;
-	// height: 56px;
 	font-weight: 700;
 	font-size: 14px;
 	line-height: 26px;
@@ -79,7 +76,15 @@ a {
 	display: flex;
     justify-content: center;
     align-items: center;
+	// cursor: pointer;
 }
+
+.site-list__item:hover, .site-list__item:focus, .site-list__item:active {
+	// opacity: .8;
+	transform: scale(1.05);
+}
+
+
 .main-nav {
 	width: 100%;
 }
@@ -87,7 +92,6 @@ a {
 	display: flex;
 	margin: 0;
 	padding: 0;
-	// flex-wrap: wrap;
 }
 
 // .main-nav {
@@ -132,43 +136,73 @@ a {
 // 	}
 // }
 
-// .intro {
-// 	display: flex;
-// 	flex-wrap: wrap;
-// 	background: url(../img/bg-back-desktop@2x.jpg);
-// 	background-position: top center;
-// 	background-repeat: no-repeat;
-// 	justify-content: center;
-// 	// margin-top: 65px;
-// 	&-title {
-// 		margin: 0 auto;
-// 		width: 285px;
-// 		font-weight: 700;
-// 		font-size: 18px;
-// 		line-height: 26px;
-// 		font-style: normal;
-// 		align-items: center;
-// 		text-align: center;
-// 		text-transform: uppercase;
-// 	}
-// 	&-subtitle {
-// 		margin: 0 auto;
-// 		padding: 18px;
-// 		width: 285px;
-// 		font-weight: 400;
-// 		font-size: 14px;
-// 		line-height: 26px;
-// 		align-items: center;
-// 		text-align: center;
-// 		text-transform: uppercase;
-// 	}
-// }
-// .page-main__intro-advantages {
-// 	width: 282px;
-// 	height: 214px;
-// 	justify-content: center;
-// 	padding: 90px 18px 55px 18px;
-// }
+.page-main {
+	margin-top: 70px;
+
+	&__intro-advantages {
+		margin: 0 auto;
+		display: flex;
+		width: 460px;
+		height: 350px;
+		justify-content: center;
+		// padding-top: 78px;
+		// padding-bottom: 90px;
+	}
+}
+.intro {
+	// display: flex;
+	// flex-wrap: wrap;
+	margin: 0 auto;
+	position: relative;
+	vertical-align: bottom;
+	background: url(../img/bg-back-desktop@1x.jpg);
+	padding-top: 60px;
+	background-size: initial;
+	background-position: top center;
+	background-repeat: no-repeat;
+	// justify-content: center;
+	// margin-top: 65px;
+	width: 1200px;
+	height: 518px;
+	&-triangle-1 {
+		// margin: 0 auto;
+		// display: flex;
+		// justify-content: center;
+		// align-items: center;
+		position: absolute;
+		width: 1200px;
+		height: 57px;
+		padding-top: 51px;
+	}
+	&-triangle-2 {
+		display: none;
+	}
+	&-title {
+		margin: 0 auto;
+		width: 483px;
+		font-weight: 700;
+		font-size: 18px;
+		line-height: 26px;
+		font-style: normal;
+		align-items: center;
+		text-align: center;
+		text-transform: uppercase;
+		margin-top: 150px;
+		padding: 25px;
+	}
+	&-subtitle {
+		margin: 0 auto;
+		// padding: 18px;
+		width: 483px;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 26px;
+		align-items: center;
+		text-align: center;
+		text-transform: uppercase;
+	}	
+}
+
 // .compare_cards {
 // 	margin: 0 auto;
 // 	display: flex;
