--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -46,13 +46,11 @@ img {
 		align-items: flex-end;
 		justify-content: space-between;
 	}
-// 	&__logo {
-// 		display: flex;
-// 		justify-content: center;
-// 		height: 84px;
-// 		width: 100%;
-// 		position: absolute;
-// 	}
+	&__logo-link {
+		display: flex;
+		justify-content: center;
+		height: 84px;
+	}
 }
 .header_active {
 	background: #81B3D2;
@@ -76,11 +74,10 @@ a {
 	display: flex;
     justify-content: center;
     align-items: center;
-	// cursor: pointer;
+	cursor: pointer;
 }
 
 .site-list__item:hover, .site-list__item:focus, .site-list__item:active {
-	// opacity: .8;
 	transform: scale(1.05);
 }
 
@@ -145,13 +142,9 @@ a {
 		width: 460px;
 		height: 350px;
 		justify-content: center;
-		// padding-top: 78px;
-		// padding-bottom: 90px;
 	}
 }
 .intro {
-	// display: flex;
-	// flex-wrap: wrap;
 	margin: 0 auto;
 	position: relative;
 	vertical-align: bottom;
@@ -160,16 +153,9 @@ a {
 	background-size: initial;
 	background-position: top center;
 	background-repeat: no-repeat;
-	// justify-content: center;
-	// margin-top: 65px;
 	width: 1200px;
 	height: 518px;
 	&-triangle-1 {
-		// margin: 0 auto;
-		// display: flex;
-		// justify-content: center;
-		// align-items: center;
-		position: absolute;
 		width: 1200px;
 		height: 57px;
 		padding-top: 51px;
@@ -179,7 +165,9 @@ a {
 	}
 	&-title {
 		margin: 0 auto;
-		width: 483px;
+		display: flex;
+		width: 484px;
+		height: 110px;
 		font-weight: 700;
 		font-size: 18px;
 		line-height: 26px;
@@ -187,13 +175,11 @@ a {
 		align-items: center;
 		text-align: center;
 		text-transform: uppercase;
-		margin-top: 150px;
-		padding: 25px;
 	}
 	&-subtitle {
 		margin: 0 auto;
-		// padding: 18px;
-		width: 483px;
+		width: 484px;
+		height: 110px;
 		font-weight: 400;
 		font-size: 14px;
 		line-height: 26px;
