--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,6 +17,10 @@ img {
 	box-sizing: inherit;
 }
 
+ul {
+	padding-inline-start: 0px;
+}
+
 .wrapper {
 	max-width: 1200px;
 }
@@ -30,7 +34,7 @@ img {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	transition: 0.2s linear;
+	transition: 0.5s linear;
 	z-index: 999;
 	&__wrapper {
 		display: flex;
@@ -46,7 +50,7 @@ img {
 }
 .header_active {
 	background: #81B3D2;
-	height: 96px;
+	height: 85px;
 	max-width: 1200px;
 }
 
@@ -63,7 +67,6 @@ a {
 	line-height: 26px;
 	text-transform: uppercase;
 	color: #000000;
-
 	display: flex;
     justify-content: center;
     align-items: center;
@@ -302,6 +305,7 @@ a {
 
 
 .search {
+		width: 1200px;
 		height: 287px;
 		margin-top: 57px;
 		display: flex;
@@ -314,7 +318,6 @@ a {
 		&_cards {
 			display: flex;
 			flex-direction: column;
-			// margin: 0 auto;
 			justify-content: center;
 			align-items: center;
 			text-align: center;
@@ -346,10 +349,8 @@ a {
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				flex-direction: column;
 				width: 458px;
 				height: 58px;
-				left: 20px;
 				font-weight: 700;
 				font-size: 21px;
 				line-height: 26px;
@@ -359,227 +360,96 @@ a {
 				background: #81B3D2;
 				border: 0;
 				margin-bottom: 66px;
-		}
-		
+				cursor: pointer;
+		}		
 }
-// .main-nav {
-// 	font-weight: 700;
-// 	font-size: 14px;
-// 	line-height: 26px;
-// 	display: flex;
-// 	align-items: center;
-// 	text-align: center;
-// 	text-transform: uppercase;
-// 	color: #000000;
-// 	&__list {		
-// 		display: flex;
-// 		margin: 0;
-// 		padding: 0;
-// 		align-content: center;
-// 		justify-content: space-around;
-// 	}
-// 	&_burger {
-// 	display: none;
-// 	width: 40px;
-// 	height: 28px;
-// 	position: relative;
-// 	}
-// }
-// .burger_line {
-// 	display: block;
-// 	width: 100%;
-// 	height: 2px;
-// 	background: #81B3D2;
-// 	position: absolute;
-// 	left: 0;
-// 	&_first {
-// 		top: 0;
-// 	}
-// 	&_second {
-// 		top: 50%;
-// 		transform: translateY(-50%);
-// 	}
-// 	&_third {
-// 		bottom: 0;
-// 	}
-// }
 
-// .compare_cards {
-// 	margin: 0 auto;
-// 	display: flex;
-// 	flex-wrap: wrap;
-// 	justify-content: center;
-// 	text-align: center;
-// 	&-city {
-// 		height: 211px;
-// 		text-align: center;
-// 		padding: 0px 12px 40px 12px;
-// 		background: #81B3D2;
-// 		color: #ffffff;
-// 	}
-// 	&-bridge {
-// 		height: 191px;
-// 		text-align: center;
-// 		padding: 0px 12px 40px 12px;
-// 		background: #81B3D2;
-// 		color: #ffffff;
-// 	}
-// 	&-square {
-// 		text-align: center;
-// 		padding: 0px 12px 40px 12px;
-// 		height: 200px;
-// 		background: #EEEEEE;
-// 	}
-// 	&-road {
-// 		text-align: center;
-// 		padding: 0px 12px 40px 12px;
-// 		height: 200px;
-// 		background: #EEEEEE;
-// 	}
-// 	&-turists {
-// 		text-align: center;
-// 		padding: 0px 12px 40px 12px;
-// 		height: 200px;
-// 		background: #EEEEEE;
-// 	}
-// 	&-item {
-// 		padding-top: 30px;
-// 		font-weight: 700;
-// 		font-size: 18px;
-// 		line-height: 26px;
-// 		align-items: center;
-// 		text-align: center;
-// 		text-transform: uppercase;
-// 	}
-// 	&-number {
-// 		font-weight: 400;
-// 		font-size: 14px;
-// 		line-height: 21px;
-// 		align-items: center;
-// 		text-align: center;
-// 		text-transform: uppercase;
-// 	}
-// 	&-causes {
-// 		font-weight: 400;
-// 		font-size: 14px;
-// 		line-height: 21px;
-// 		align-items: center;
-// 		text-align: center;
-// 		text-transform: uppercase;
-// 	}
-// }
-// .layer {
-// 	position: absolute;
-// 	width: 280px;
-// 	height: 1px;
-// 	left: 20px;
-// 	background: #D6D6D6;
-// }
-// .image-city {
-// 	display: flex;
-// 	flex-wrap: wrap;
-// }
-// 
-// }
-// .search {
-// 	height: 287px;
-// 	margin: 0 auto;
-// 	display: flex;
-// 	flex-wrap: wrap;
-// 	justify-content: center;
-// 	text-align: center;
-// 	&_cards-item {
-// 		margin: 0 auto;
-// 		padding-top: 33px;
-// 		font-weight: 700;
-// 		font-size: 18px;
-// 		line-height: 26px;
-// 		align-items: center;
-// 		text-align: center;
-// 		text-transform: uppercase;
-// 	}
-// 	&_cards-choice {
-// 		display: flex;
-// 		margin: 0;
-// 		width: 261px;
-// 		height: 120px;
-// 		font-weight: 400;
-// 		font-size: 14px;
-// 		line-height: 21px;
-// 		align-items: center;
-// 		text-align: center;
-// 		text-transform: uppercase;
-// 		margin-bottom: 27px;
-// 	}
-// 	&_button {
-// 		position: absolute;
-// 		width: 280px;
-// 		height: 58px;
-// 		left: 20px;
-// 		font-weight: 700;
-// 		font-size: 21px;
-// 		line-height: 26px;
-// 		text-align: center;
-// 		text-transform: uppercase;
-// 		color: #ffffff;
-// 		background: #81B3D2;
-// 		border: 0;
-// 		margin-bottom: 49px;
-// 	}
-// }
-// .map_mobile {
-// 	display: flex;
-// 	justify-content: center;
-// 	&-marker {
-// 		position: absolute;
-// 		padding-top: 175px;
-// 	}
-// }
-// .footer {
-// 	height: 243px;
-// 	&_visit-title {
-// 		display: flex;
-// 		font-weight: 700;
-// 		font-size: 21px;
-// 		line-height: 26px;
-// 		align-items: center;
-// 		text-align: center;
-// 		text-transform: uppercase;
-// 		justify-content: center;
-// 		margin-top: 38px;
-// 		margin-bottom: 30px;
-// 	}
-// 	&_social {
-// 		display: flex;
-// 		list-style: none;
-// 		margin: 0;
-// 		margin-bottom: 30px;
-// 	}
-// 	&_copyright {
-// 		display: flex;
-// 		font-weight: 400;
-// 		font-size: 14px;
-// 		line-height: 26px;
-// 		justify-content: center;
-// 		align-items: center;
-// 		text-transform: uppercase;
-// 		text-align: center;
-// 	}
-// }
-// ul {
-// 	padding-inline-start: 0px;
-// }
-// .social-button {
-// 	display: flex;
-// 	align-items: center;
-// 	justify-content: center;
-// 	width: 46px;
-// 	height: 48px;
-// 	color: #ffffff;
-// 	background-color: #81B3D2;
-// 	padding: 10px;
-// 	margin: 3px;
-// }
+.map {
+	width: 1200px;
+	height: 350px;
+
+	&-mobile {
+		max-width: 1200px;
+		margin: 0 auto;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	&-marker {
+		margin: 0 auto;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		position: relative;
+		top: -187px;
+	}
+}
+
+.footer {
+		width: 1200px;
+		height: 120px;
+		display: flex;
+		align-content: center;
+		justify-content: space-around;
+		align-items: center;
+		&_visit-title {
+			display: flex;
+			font-weight: 700;
+			font-size: 21px;
+			line-height: 26px;
+			align-items: center;
+			text-align: center;
+			text-transform: uppercase;
+			justify-content: center;
+		}
+		&_social {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			align-items: center;
+			list-style: none;
+			padding: 0 6px;
+		}
+		&_copyright {
+			display: flex;
+			font-weight: 400;
+			font-size: 14px;
+			line-height: 26px;
+			justify-content: center;
+			align-items: center;
+			text-transform: uppercase;
+			text-align: center;
+		}
+}
+
+.social-button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 46px;
+	height: 48px;
+	color: #ffffff;
+	background-color: #81B3D2;
+	margin: 3px;
+}
+
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    bottom: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+
 
 // @media screen and (max-width: 769px) {
 	
