--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -43,15 +43,19 @@ ul {
 		align-items: flex-end;
 		justify-content: space-between;
 	}
-	&__logo-link {
+	&__logo-link-1 {
 		display: flex;
 		justify-content: center;
-		height: 84px;
+		// height: 84px;
+		position: absolute;
+	}
+	&__logo-link-2 {
+		display: none;
 	}
 }
 .header_active {
 	background: #81B3D2;
-	height: 85px;
+	height: 87px;
 	max-width: 1200px;
 }
 
@@ -66,7 +70,7 @@ a {
 
 .site-list__item {	
 	list-style: none;
-	width: 239px;
+	width: 100%;
 	font-weight: 700;
 	font-size: 14px;
 	line-height: 26px;
@@ -84,13 +88,73 @@ a {
 
 .main-nav {
 	width: 100%;
+
+    &_burger {
+		display: none;
+		width: 23px;
+  		height: 22px;
+		position: relative;
+	}
+	&__list {
+		display: flex;
+		padding: 10px;
+		position: absolute;
+		justify-content: space-around;
+		align-items: center;
+		max-width: 1180px;
+		width: 100%;
+	}
+	&_close {
+		display: none;
+		// width: 40px;
+		// height: 40px;
+		// position: absolute;
+		// top: 20px;
+		// right: 20px;
+		// z-index: 11;
+	}
+}
+.burger_line {
+		background: #81B3D2;
+		display: block;
+		width: 100%;
+		height: 4px;
+		position: absolute;
+		left: 0;
+	
+	&_first{
+		top: 0;
+	}
+	  
+	&_second{
+		top: 50%;
+		-webkit-transform: translateY(-50%);
+			-ms-transform: translateY(-50%);
+				transform: translateY(-50%);
+	}
+	  
+	&_third{
+		bottom: 0;
+	}
+}	
+
+.main-nav_close-line {
+	display: block;
+    width: 100%;
+    height: 4px;
+    background-color: #ffffff;
+    position: absolute;
+    top: 50%;
+}
+.main-nav_close-line:first-child {
+    transform: translateY(-50%) rotate(45deg);
 }
 
-.main-nav__list {
-	display: flex;
-	margin: 0;
-	padding: 0;
-}
+.main-nav_close-line:last-child {
+    transform: translateY(-50%) rotate(-45deg);
+}	
+
+
 
 .page-main {
 	margin-top: 70px;
@@ -147,6 +211,11 @@ a {
 		text-transform: uppercase;
 		margin-bottom: 41px;
 	}	
+}
+
+.image-city {
+	width: 100%;
+	height: 256px;
 }
 
 .compare {
@@ -281,7 +350,11 @@ a {
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		:hover {
+			transform: scale(1.5);
+		}
 	}
+
 	&-title {
 		display: flex;
 		justify-content: center;
@@ -366,6 +439,9 @@ a {
 				border: 0;
 				margin-bottom: 66px;
 				cursor: pointer;
+				&:hover {
+					background: #6ba4c7 ;
+				}
 		}		
 }
 
@@ -437,6 +513,8 @@ a {
 	color: #ffffff;
 	background-color: #81B3D2;
 	margin: 3px;
+	&:hover {
+	}
 }
 
 .visually-hidden:not(:focus):not(:active),
@@ -454,136 +532,254 @@ input[type="radio"].visually-hidden {
     overflow: hidden;
 }
 
+@media screen and (max-width: 769px) {
+.page-header {
+	&__logo-link-1 {
+		display: none;
+	}
+	&__logo-link-2 {
+		display: flex;
+		position: absolute;
+		height: 84px;
+	}
+}
+}
 
-
-// @media screen and (max-width: 769px) {
+@media screen and (max-width: 321px) {
 	
-// .main-nav {
-// 	display: flex;
-// 	width: 100%;
-// 	height: 100%;	
-// 	top: 0;
-// 	left: 0;
-// 	z-index: 10;
-// 	font-weight: 700;
-// 	font-size: 14px;
-// 	line-height: 26px;
-// 	text-align: center;
-// 	text-transform: uppercase;
-// 	&_close {
-// 		display: none;
-// 	}
-// 	&_burger {
-// 		display: none;
-// 	}
-// }
-// .page-header__logo {
-// 	width: 100%;
-// 	position: absolute;
-// }
+.page__body {
+		// background-color: rgb(191, 222, 212);
+	}
+	
+.page-header {
+	max-width: 320px;
+	position: fixed;
+	top: 0;
+	width: 100%;
+
+	&__wrapper {
+		flex-direction: column;
+	}
+	// &__logo-link-1 {
+	// 	display: none;
+	// }
+	&__logo-link-2 {
+	// 	position: absolute;
+		top: 220px;
+	// 	// background-image: url(/../img/logo-sedona-mobile.svg);
+	}
+}
+	
+.page-main {
+
+	&__intro-advantages {
+		margin: 0 auto;
+		display: flex;
+		width: 382px;
+		height: 214px;
+		justify-content: center;
+		padding-top: 90px;
+		padding-bottom: 85px;
+	}
+}
+
+.page-main .main-nav_active {
+	margin-top: 220px;
+}
+
+.wrapper {
+	max-width: 320px;
+}
+
+.intro {
+	padding-top: 0px;
+	width: 320px;
+	height: 389px;
+	&-triangle-1 {
+		display: none;
+	}
+	&-triangle-mobile {
+		background: url(../img/bg-intro-triangle-mobile.svg);
+		background-repeat: no-repeat;
+		margin-top: 103px;
+	}	
+	&-title {
+		margin: 0 auto;
+		display: flex;
+		width: 285px;
+		// height: 162px;
+		margin-top: 32px;
+	}
+	&-subtitle {
+		margin: 0 auto;
+		width: 285px;
+		// height: 162px;
+		margin-bottom: 11px;
+	}	
+	&-triangle-2 {
+		display: block;
+	}
+}
+
+.image-city {
+	width: 100%;
+	height: 260px;
+}
+
+.compare {
+	grid-template-columns: repeat(1, 1fr);
+	width: 320px;
+
+	&_image {
+		grid-column: span 1;
+		height: 260px;
+	}
+	&_cards {
+		height: 167px;
+
+		&-city {
+			height: 211px;
+		}
+		&-bridge {
+			height: 191px;
+		}
+		&-square {
+			height: 167px;
+		}
+		&-road {
+			height: 167px;
+		}
+		&-turists {
+			height: 167px;
+		}
+	}
+}
+.search {
+	width: 320px;
+	height: 287px;
+	margin-top: 33px;
+		
+	&-choice {
+		padding: 27px;
+	}
+	
+	&_button {
+			width: 280px;
+	}	
+	&_cards-item {
+		font-size: 21px;
+		line-height: 26px;
+	}	
+	&_cards-choice {
+		font-size: 14px;
+		line-height: 24px;
+	}
+}
+
+.layer {
+	display: block;
+	position: relative;
+}
+
+.map {
+    width: 320px;
+    height: 350px;
+    overflow: hidden;
+}
+
+.footer {
+    width: 320px;
+    height: 233px;
+	flex-direction: column;
+}
+
+.main-nav {
+	width: 100%;
+    // height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #81B3D2;
+    z-index: 10;
+    transform: translateY(-100%);
+    transition: .2s all linear;
+
+    &_burger {
+		display: block;
+		top: 17px;
+		right: 17px;
+	}
+	&__list {
+		display: flex;
+		position: relative;
+		flex-direction: column;
+		align-items: center;
+		width: 320px;
+		height: 220px;
+		margin: 0 auto;
+		padding: 0;
+	}	
+	&_active {
+		transform: translateY(0);
+	}
+	&_active a {
+		color: #EEEEEE;
+	}
+	&_close {
+		display: flex;
+		width: 22px;
+ 		height: 22px;
+	    position: absolute;
+	    top: 17px;
+	    right: 17px;
+	    z-index: 11;
+	}
+	&_close-line {
+		display: block;
+		width: 100%;
+		height: 4px;
+		background-color: #FFF;
+		// position: absolute;
+		top: 50%;
+		&:first-child {
+			transform: translateY(-50%) rotate(45deg);
+		}	
+		&:last-child {
+			transform: translateY(-50%) rotate(-45deg);
+		}
+	}
+}
+
+// .main-nav_active .page-main {
+// 	margin-top: 220px;
 // }
 
-// @media screen and (max-width: 321px) {
-	
-// .page-header__wrapper {  
-//     display: flex;
-// 	align-items: flex-start;
-// 	flex-direction: row;
-// 	justify-content: space-between;
-// }
-// .main-nav {
-// 	width: 100%;
-// 	height: 223px;
-// 	position: fixed;
-// 	top: 0;
-// 	left: 0;
-// 	background: #81B3D2;
-// 	z-index: 10;
-// 	transform: translateX(100%);
-// 	transition: all 0.2s ease-out;
-// 	font-weight: 700;
-// 	font-size: 18px;
-// 	line-height: 40px;
-// 	display: flex;
-// 	align-items: center;
-// 	text-align: center;
-// 	text-transform: uppercase;
-// 	justify-content: center;
-//     &_active {
-// 		transform: translateX(0);		
-// 	}
-//     &_burger {
-// 		display: block;
-// 		margin-top: 20px;
-// 		margin-left: auto;
-// 		margin-right: 20px;
-// 	}
-// 	&__list {
-// 		flex-direction: column;
-// 	}
-// 	&_close {
-// 		display: block;
-// 		width: 40px;
-// 		height: 40px;
-// 		position: absolute;
-// 		top: 20px;
-// 		right: 20px;
-// 		z-index: 11;
-// 	}
-// }
-// a {
-// 	font-weight: 700;
-// 	font-size: 18px;
-// 	line-height: 40px;
-// 	color: #ffffff;
-// }	
-// .header_active {
-// 	position: fixed;
-// 	padding-top: 50px;
-// 	background: #81B3D2;
-// 	// width: 100%;
-	
-// 	.burger_line {
-// 		background: #ffffff;
-// 	}
-// 	.main-nav__list {
-// 		justify-content: space-between;
-// 	}
-// .main-nav_close-line {
-// 	display: block;
-//     width: 100%;
-//     height: 2px;
-//     background-color: #ffffff;
-//     position: absolute;
-//     top: 50%;
-// }
-// .main-nav_close-line:first-child {
-//     transform: translateY(-50%) rotate(45deg);
-// }
+.site-list__item {
+	width: 100%;
+	height: 55px;
+	box-shadow: 0px 1px 0px rgba(1, 1, 1, 0.2);
+	&:last-child {
+		box-shadow: none;
+	}
+}
 
-// .main-nav_close-line:last-child {
-//     transform: translateY(-50%) rotate(-45deg);
-// }	
-// }
-// .main-nav_close-line {
-// 	display: block;
-//     width: 100%;
-//     height: 2px;
-//     background-color: #ffffff;
-//     position: absolute;
-//     top: 50%;
-// }
-// .main-nav_close-line:first-child {
-//     transform: translateY(-50%) rotate(45deg);
-// }
-// .main-nav_close-line:last-child {
-//     transform: translateY(-50%) rotate(-45deg);
-// }
-// .intro {
-// 	display: flex;
-// 	flex-wrap: wrap;
-// 	background: url(../img/bg-back-mobile@1x.jpg);
-// 	justify-content: center;
-// 	background-repeat: no-repeat;
-// }
-// }
+.gradient {
+	bottom: 0;
+	position: absolute;
+	width: 100%;
+	height: 7px;
+	background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
+}
+
+.header_active .burger_line {
+	background: #ffffff;
+}
+
+.header_active {
+	position: fixed;
+	background: #81B3D2;
+	width: 320px;
+	height: 70px;
+}
+
+}
