--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -602,7 +602,7 @@ input[type="radio"].visually-hidden {
 		margin: 0 auto;
 		display: flex;
 		width: 285px;
-		margin-top: 31px;
+		margin-top: 15px;
 	}
 	&-subtitle {
 		margin: 0 auto;
@@ -649,6 +649,10 @@ input[type="radio"].visually-hidden {
 		&-turists {
 			height: 167px;
 		}
+	}
+	&_info_cards {
+		text-align: left;
+		padding: 0;
 	}
 }
 .search {
