--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -149,6 +149,7 @@ a {
 }	
 
 .page-main {
+	max-width: 1200px;
 	margin-top: 70px;
 
 	&__intro-advantages {
@@ -173,9 +174,8 @@ a {
 	height: 679px;
 
 	&-triangle-1 {
-		width: 1200px;
 		height: 57px;
-		padding-top: 51px;
+		padding-top: 52px;
 	}
 	&-triangle-mobile {
 		display: none;
@@ -535,6 +535,10 @@ input[type="radio"].visually-hidden {
 
 @media screen and (max-width: 769px) {
 
+.page__body {
+	width: 769px;
+}
+
 .page-header {
 	&__logo-link-1 {
 		display: none;
@@ -547,7 +551,15 @@ input[type="radio"].visually-hidden {
 }
 }
 
+.page-main {
+	max-width: 769px;
+}
+
 @media screen and (max-width: 321px) {
+
+.page__body {
+	width: 320px;
+}
 		
 .page-header {
 	max-width: 320px;
@@ -564,6 +576,8 @@ input[type="radio"].visually-hidden {
 }
 	
 .page-main {
+	max-width: 320px;
+
 	&__intro-advantages {
 		margin: 0 auto;
 		display: flex;
