--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,6 +1,11 @@
+.page {
+  width: 1200px;
+  margin: 0 auto;
+}
+
 .page__body {
   font-family: PT Sans, Arial, sans-serif;
-  max-width: 1200px;
+  width: 1200px;
   margin: 0 auto;
 }
 
@@ -23,12 +28,10 @@ ul {
 }
 
 .wrapper-full {
-  max-width: 1280px;
   margin: 0 auto;
 }
 
 .page-header {
-  max-width: 1200px;
   position: fixed;
   top: 0;
   width: 100%;
@@ -493,6 +496,7 @@ a {
   background-color: #81B3D2;
   margin: 3px;
 }
+
 .visually-hidden:not(:focus):not(:active),
 input[type=checkbox].visually-hidden,
 input[type=radio].visually-hidden {
@@ -510,8 +514,8 @@ input[type=radio].visually-hidden {
 }
 
 @media screen and (max-width: 769px) {
-  .page__body {
-    width: 769px;
+  .page-header {
+    width: 100%;
   }
   .page-header__logo-link-1 {
     display: none;
@@ -521,17 +525,25 @@ input[type=radio].visually-hidden {
     position: absolute;
     height: 84px;
   }
+  .page-main {
+    width: 100%;
+  }
+  .page-main__intro-advantages {
+    width: 100%;
+  }
+  .wrapper {
+    width: 100%;
+  }
 }
-.page-main {
-  max-width: 769px;
-}
-
 @media screen and (max-width: 321px) {
-  .page__body {
+  .page {
     width: 320px;
   }
-  .page-header {
+  .page__body {
     max-width: 320px;
+  }
+  .page-header {
+    width: 100%;
     position: fixed;
     top: 0;
     width: 100%;
@@ -543,7 +555,7 @@ input[type=radio].visually-hidden {
     top: 220px;
   }
   .page-main {
-    max-width: 320px;
+    width: 320px;
   }
   .page-main__intro-advantages {
     margin: 0 auto;
@@ -558,13 +570,13 @@ input[type=radio].visually-hidden {
     margin-top: 220px;
   }
   .wrapper {
-    max-width: 320px;
+    width: 100%;
   }
   .intro {
     background-image: url(../img/bg-back-mobile@1x.jpg);
     background-repeat: no-repeat;
     padding-top: 0px;
-    width: 320px;
+    width: 100%;
     height: 100%;
   }
   .intro-triangle-1 {
@@ -597,7 +609,7 @@ input[type=radio].visually-hidden {
   }
   .compare {
     grid-template-columns: repeat(1, 1fr);
-    width: 320px;
+    width: 100%;
   }
   .compare_image {
     grid-column: span 1;
@@ -626,7 +638,7 @@ input[type=radio].visually-hidden {
     padding: 0;
   }
   .search {
-    width: 320px;
+    width: 100%;
     height: 287px;
   }
   .search-choice {
@@ -648,12 +660,12 @@ input[type=radio].visually-hidden {
     position: relative;
   }
   .map {
-    width: 320px;
+    width: 100%;
     height: 350px;
     overflow: hidden;
   }
   .footer {
-    width: 320px;
+    width: 100%;
     height: 233px;
     flex-direction: column;
   }
@@ -677,7 +689,7 @@ input[type=radio].visually-hidden {
     position: relative;
     flex-direction: column;
     align-items: center;
-    width: 320px;
+    width: 100%;
     height: 220px;
     margin: 0 auto;
     padding: 0;
@@ -731,7 +743,7 @@ input[type=radio].visually-hidden {
   .header_active {
     position: fixed;
     background: #81B3D2;
-    width: 320px;
+    width: 100%;
     height: 70px;
   }
 }
