--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -100,11 +100,11 @@ a {
 	}
 	&__list {
 		display: flex;
-		padding: 10px;
+		padding: 10px 0;
 		position: absolute;
 		justify-content: space-around;
 		align-items: center;
-		max-width: 1180px;
+		max-width: 1200px;
 		width: 100%;
 	}
 	&_close {
@@ -513,9 +513,13 @@ a {
 	justify-content: center;
 	width: 46px;
 	height: 48px;
-	color: #ffffff;
 	background-color: #81B3D2;
 	margin: 3px;
+	fill: #ffffff;
+}
+
+.social-button:hover {
+	fill: #000000;
 }
 
 .visually-hidden:not(:focus):not(:active),
