--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,11 @@
 // @import "footer.scss";
 // @import "template";
 
+
+$desktop-width: 1200px;
+$tablet-width: 769px;
+$mobile-width: 320px;
+
 .page {
 	// width: 1200px;
 	margin: 0 auto;
@@ -26,9 +31,9 @@ ul {
 	padding-inline-start: 0px;
 }
 
-.wrapper {
-	// max-width: 1200px;
-}
+// .wrapper {
+// 	// max-width: 1200px;
+// }
 
 .wrapper-full{
 	margin: 0 auto;
@@ -541,7 +546,7 @@ input[type="radio"].visually-hidden {
     overflow: hidden;
 }
 
-@media screen and (max-width: 769px) {
+@media (max-width: $tablet-width) {
 
 .page-header {
 	width: 100%;
@@ -570,7 +575,7 @@ input[type="radio"].visually-hidden {
 }
 
 
-@media screen and (max-width: 321px) {
+@media (max-width:$mobile-width) {
 
 	.page {
 		width: 320px;
