--- a/source/css/style.css
+++ b/source/css/style.css
@@ -572,6 +572,14 @@ input[type=radio].visually-hidden {
     width: 100%;
     height: 100%;
   }
+}
+@media (max-width: 320px) and (-webkit-min-device-pixel-ratio: 2), (max-width: 320px) and (min-resolution: 2dppx) {
+  .intro {
+    background-image: url(../img/bg-back-mobile@2x.jpg);
+    background-size: 320px auto;
+  }
+}
+@media (max-width: 320px) {
   .intro-triangle-1 {
     display: none;
   }
