--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -547,7 +547,7 @@ input[type="radio"].visually-hidden {
 }
 
 @media (max-width: $tablet-width) {
-
+	
 .page-header {
 	width: 100%;
 
@@ -622,12 +622,18 @@ input[type="radio"].visually-hidden {
 }
 
 .intro {
+	
 	background-image: url(../img/bg-back-mobile@1x.jpg);
 	background-repeat: no-repeat;
 	padding-top: 0px;
 	width: 100%;
 	height: 100%;
-	
+
+	@media (min-resolution: 2dppx) {
+		background-image: url(../img/bg-back-mobile@2x.jpg);
+		background-size: 320px auto;
+	}
+
 	&-triangle-1 {
 		display: none;
 	}
